fix flag misalignement in upload form

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -238,6 +238,7 @@ select.form-input {
 
 .language .input-group label {
     margin-bottom: 1px;
+    vertical-align: unset;
 }
 
 .language .input-group input {
